Add enable preview JVM args to build.gradle